[package]
name = "rust"
version = "0.1.0"
authors = ["Rich Infante <rich@richinfante.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
satellite = { path = "../../satellite-rs" }
chrono = "0.4"
reqwest = "0.9.12"
space-plot = { path = "../../space-plot" }
rand = "0.6.5"
